--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.contextPath=/springfox
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/college
 spring.datasource.username=postgres
-spring.datasource.password=@saisuper7
+spring.datasource.password=Leelavathi@123
 
